--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,36 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Freshify Corporate and Executive Management Onboarding
+description: Corporate and Executive Management onboarding.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://em.freshify.help
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+# Enable or disable the side/mobile menu globally
+# Nav menu can also be selectively enabled or disabled using page variables or the minimal layout
+nav_enabled: false
+
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
+
+  # Enable or disable the site search
+# Supports true (default) or false
+search_enabled: false
+
+# Color scheme supports "light" (default) and "dark"
+color_scheme: dark
+
+
+
