--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Freshify Corporate and Executive Management Onboarding
+title: Freshify Corp/EM
 description: Corporate and Executive Management onboarding.
 theme: just-the-docs
 
